<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/bookswithphone"
    >


    <TextView
        android:background="@drawable/textview_main"
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"
        android:text="@string/online_school_subject_tests"
        android:textColor="#FFCDD2"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button_main"
        android:padding="15dp"
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="130dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/start"
        android:textSize="20sp"
        android:textAlignment="textStart"
        android:drawableLeft="@drawable/icon_studenthat"
        android:drawablePadding="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button_main"
        android:padding="15dp"
        android:id="@+id/infoButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:text="@string/information_about_ct"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:drawableLeft="@drawable/icon_kolokol"
        android:drawablePadding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />


    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/banner_ad_unit_id">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>